# etcd-manager

./: WORKSPACE
cmd/etcd-manager/: main.go
pkg/apis/etcd/: etcdapi.proto
pkg/backup/: fs.go  store.go
pkg/controller/: controller.go  etcdclusterstate.go  peer.go  restore.go  upgrade.go
pkg/etcd/: BUILD.bazel  etcdserver.go  restore.go  tar.go
pkg/legacy/: adopt.go
pkg/privateapi/: server.go
pkg/volumes/: BUILD.bazel  boot.go  interfaces.go  mounter.go  mounter_test.go
pkg/volumes/aws/: BUILD.bazel  volumes.go
test/integration/harness/: cluster.go  node.go
