load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["volumes.go"],
    importpath = "kope.io/etcd-manager/pkg/volumes/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/ec2metadata:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/request:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/kops/protokube/pkg/etcd:go_default_library",
        "//vendor/k8s.io/kops/protokube/pkg/gossip:go_default_library",
        "//vendor/k8s.io/kops/protokube/pkg/gossip/aws:go_default_library",
        "//vendor/k8s.io/kops/upup/pkg/fi/cloudup/awsup:go_default_library",
    ],
)
